--- a/content/W15-W18.html
+++ b/content/W15-W18.html
@@ -145,7 +145,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='課堂補充-1.html'>課堂補充-1</a><li><a href='W7-W9.html'>W7-W9</a><li><a href='W10-W14.html'>W10-W14</a><li><a href='W15-W18.html'>W15-W18</a></li></ul><li><a href='課堂補充-2.html'>課堂補充-2</a><li><a href='喵~~.html'>喵~~</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='W7-W9.html'>W7-W9</a><li><a href='W10-W14.html'>W10-W14</a><li><a href='W15-W18.html'>W15-W18</a></li></ul><li><a href='課堂補充.html'>課堂補充</a><li><a href='喵~~.html'>喵~~</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,9 +156,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W10-W14 << <a href='W10-W14.html'>Previous</a> <a href='課堂補充-2.html'>Next</a> >> 課堂補充-2<br /><h1>W15-W18</h1>
+    <div id="tipue_search_content">W10-W14 << <a href='W10-W14.html'>Previous</a> <a href='課堂補充.html'>Next</a> >> 課堂補充<br /><h1>W15-W18</h1>
 <p>期末分組報告，以及個人整理好自己的網站、倉儲，用大概兩分鐘說明自己本學期收穫。</p>
-<br />W10-W14 << <a href='W10-W14.html'>Previous</a> <a href='課堂補充-2.html'>Next</a> >> 課堂補充-2</div>
+<br />W10-W14 << <a href='W10-W14.html'>Previous</a> <a href='課堂補充.html'>Next</a> >> 課堂補充</div>
         
     <!-- footer -->
       <div class="container">
