--- a/content/W7-W9.html
+++ b/content/W7-W9.html
@@ -145,7 +145,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='課堂補充-1.html'>課堂補充-1</a><li><a href='W7-W9.html'>W7-W9</a><li><a href='W10-W14.html'>W10-W14</a><li><a href='W15-W18.html'>W15-W18</a></li></ul><li><a href='課堂補充-2.html'>課堂補充-2</a><li><a href='喵~~.html'>喵~~</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='W7-W9.html'>W7-W9</a><li><a href='W10-W14.html'>W10-W14</a><li><a href='W15-W18.html'>W15-W18</a></li></ul><li><a href='課堂補充.html'>課堂補充</a><li><a href='喵~~.html'>喵~~</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,12 +156,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">課堂補充-1 << <a href='課堂補充-1.html'>Previous</a> <a href='W10-W14.html'>Next</a> >> W10-W14<br /><h1>W7-W9</h1>
+    <div id="tipue_search_content">w1-w6 << <a href='w1-w6.html'>Previous</a> <a href='W10-W14.html'>Next</a> >> W10-W14<br /><h1>W7-W9</h1>
 <p><span>下載可攜程式系統利用  git 指令建立 cmsimde 網站<br/></span></p>
 <p><span>使用亂數分組將班上分為4組，並決定各組組長，交代下周上課事宜(線上上課)</span></p>
 <p>重新下載<span> </span><a href="https://drive.google.com/open?id=1xDTDfcHU18ipqZNbOufMkSZqibqNeL2T">wcmj2020_tool.7z</a>, 檔案大小為 435 MB, 解開壓縮後為 1.8 GB (其中包括 Mypaint, Dia 與 OBS 等).學會利用 ShareX 與 OBS 拍攝螢幕操作影片, 並將個人維護倉儲與網站的過程影片放入個人網站中.</p>
 <p>期中考:第九週實習</p>
-<br />課堂補充-1 << <a href='課堂補充-1.html'>Previous</a> <a href='W10-W14.html'>Next</a> >> W10-W14</div>
+<br />w1-w6 << <a href='w1-w6.html'>Previous</a> <a href='W10-W14.html'>Next</a> >> W10-W14</div>
         
     <!-- footer -->
       <div class="container">
