--- a/content/課堂補充.html
+++ b/content/課堂補充.html
@@ -145,7 +145,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='課堂補充-1.html'>課堂補充-1</a><li><a href='W7-W9.html'>W7-W9</a><li><a href='W10-W14.html'>W10-W14</a><li><a href='W15-W18.html'>W15-W18</a></li></ul><li><a href='課堂補充-2.html'>課堂補充-2</a><li><a href='喵~~.html'>喵~~</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='W7-W9.html'>W7-W9</a><li><a href='W10-W14.html'>W10-W14</a><li><a href='W15-W18.html'>W15-W18</a></li></ul><li><a href='課堂補充.html'>課堂補充</a><li><a href='喵~~.html'>喵~~</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,7 +156,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">W15-W18 << <a href='W15-W18.html'>Previous</a> <a href='喵~~.html'>Next</a> >> 喵~~<br /><h1>課堂補充-2</h1>
+    <div id="tipue_search_content">W15-W18 << <a href='W15-W18.html'>Previous</a> <a href='喵~~.html'>Next</a> >> 喵~~<br /><h1>課堂補充</h1>
 <p>inter-net(網際,inter+network)==inter-national<br/>protocol(協定)<br/>tcp/ip == transmision control protocol / internet protocol<br/>IPv4 version(版本) 4 IP 4個區段，用「.」隔開<br/>IPv6 version 6 IP 8個區段，用「:」隔開<br/>中華電信 dns server 2001:b000:168::1<br/>dns == domain name server 符號名稱伺服器</p>
 <h4><br/>常見縮寫</h4>
 <p><br/><b>URL:U<span>niform</span><span> </span><b>R</b><span>esource</span><span> </span><b>L</b><span>ocator</span><br/>統一資源定位符</b>是<a class="mw-redirect" href="https://zh.wikipedia.org/wiki/%E5%9B%A0%E7%89%B9%E7%BD%91" title="網際網路">網際網路</a>上標準的資源的位址（<span lang="en">Address</span>），如同在網路上的門牌。它最初是由<a href="https://zh.wikipedia.org/wiki/%E8%92%82%E5%A7%86%C2%B7%E4%BC%AF%E7%BA%B3%E6%96%AF-%E6%9D%8E" title="提姆·柏內茲-李">提姆·柏內茲-李</a>發明用來作為<a href="https://zh.wikipedia.org/wiki/%E4%B8%87%E7%BB%B4%E7%BD%91" title="全球資訊網">全球資訊網</a>的位址，現在它已經被<a href="https://zh.wikipedia.org/wiki/%E4%B8%87%E7%BB%B4%E7%BD%91%E8%81%94%E7%9B%9F" title="全球資訊網協會">全球資訊網協會</a>編制為網際網路標準<a class="external mw-magiclink-rfc" href="https://tools.ietf.org/html/rfc1738" rel="nofollow">RFC 1738</a>。</p>
