--- a/content/喵~~.html
+++ b/content/喵~~.html
@@ -145,7 +145,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='課堂補充-1.html'>課堂補充-1</a><li><a href='W7-W9.html'>W7-W9</a><li><a href='W10-W14.html'>W10-W14</a><li><a href='W15-W18.html'>W15-W18</a></li></ul><li><a href='課堂補充-2.html'>課堂補充-2</a><li><a href='喵~~.html'>喵~~</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Develop.html'>Develop</a><li class='has-children'><a href='Group2.html'>Group2</a><ul class='dropdown'><li><a href='w1-w6.html'>w1-w6</a><li><a href='W7-W9.html'>W7-W9</a><li><a href='W10-W14.html'>W10-W14</a><li><a href='W15-W18.html'>W15-W18</a></li></ul><li><a href='課堂補充.html'>課堂補充</a><li><a href='喵~~.html'>喵~~</a></li>
                       </ul>
                 </nav>
               </div>
@@ -156,13 +156,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">課堂補充-2 << <a href='課堂補充-2.html'>Previous</a> <br /><h1>喵~~</h1>
+    <div id="tipue_search_content">課堂補充 << <a href='課堂補充.html'>Previous</a> <br /><h1>喵~~</h1>
 <p><img alt="" height="184" src="./../images/01.jpg" width="274"/></p>
 <p><img alt="" height="225" src="./../images/02.jpg" width="225"/></p>
 <p><img alt="" height="185" src="./../images/03.jpg" width="273"/></p>
 <p><img alt="" height="168" src="./../images/04.jpg" width="300"/></p>
 <p><img alt="" height="163" src="./../images/05.jpg" width="310"/></p>
-<p><img alt="" height="206" src="./../images/06.jpg" width="245"/></p><br />課堂補充-2 << <a href='課堂補充-2.html'>Previous</a> </div>
+<p><img alt="" height="206" src="./../images/06.jpg" width="245"/></p><br />課堂補充 << <a href='課堂補充.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
